--- a/css/estilos.css
+++ b/css/estilos.css
@@ -12,6 +12,6 @@ body {
     opacity: .8;
     box-shadow: 10px 10px 10px 8px rgba(0, 0, 0, .5);
 }
-#link {
+#link, #salir{
     text-align: right;
 }
